# makeshift

./: Cargo.toml  ideas.txt  todo.txt
assets/Tilemaps/: Arena01.tmj  Arena01.tmx  TestMap.tmj  TestMap.tmx  Tunnel.tmj  Tunnel.tmx
assets/Tilesets/: TestTileset.tsj  TestTileset.tsx  Tide.tsj  Tide.tsx
src/: consts.rs  main.rs
src/common/: anim_macros.rs  mod.rs  time.rs
src/entities/: data.rs  dummy.rs  entities.rs  entity.rs  id.rs  mod.rs  spawn.rs  type_.rs
src/entities/bosses/: mod.rs
src/entities/bosses/boss/: ai.rs  boss.rs  consts.rs  entity.rs  ideas.txt  mod.rs  state.rs  state_dash.rs  state_fly.rs  state_go.rs  state_hurt.rs  state_idle.rs  state_util.rs
src/entities/bosses/test_boss/: ai.rs  anim.rs  consts.rs  entity.rs  mod.rs  state.rs  state_dash.rs  state_fly.rs  state_go.rs  state_hurt.rs  state_idle.rs  (+4 more)
src/entities/bullets/: anim.rs  bullet.rs  entity.rs  mod.rs  type_.rs
src/entities/player/: anim.rs  consts.rs  entity.rs  mod.rs  player.rs  state.rs  state_dash.rs  state_hurt.rs  state_jump.rs  state_normal.rs  state_util.rs  state_wallslide.rs  update_data.rs
src/game/: draw_data.rs  game.rs  game_data.rs  mod.rs  state.rs
src/graphics/: buffer.rs  camera.rs  image.rs  mod.rs  textures.rs  window.rs
src/io/: controller.rs
src/level/: level.rs  level_info.rs  load.rs  mod.rs  tile.rs  tilemap_info.rs  tileset_info.rs
src/other/: background.rs
src/scene/: end.rs  game.rs  mod.rs
src/systems/: camera.rs  collision.rs  mod.rs
src/test/: game.rs  mod.rs  object.rs  test_game.rs
src/ui/: hud.rs  mod.rs  text.rs
